# workflow-monitor

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
workflow_monitor/: Config.py  Namespace.py  main.py
